--- a/locales/es/messages.json
+++ b/locales/es/messages.json
@@ -1,109 +1,169 @@
 {
   "app": {
     "title": "WebAPI Starter",
-    "description": "Una aplicacion WebAPI Starter integral con operaciones CRUD y autenticacion por token API"
+    "description": "A comprehensive WebAPI Starter application with CRUD operations and API token authentication"
   },
   "auth": {
-    "invalid_credentials": "Credenciales invalidas",
+    "invalid_credentials": "Credenciales inválidas",
     "access_denied": "Acceso denegado",
     "token_expired": "El token ha expirado",
-    "invalid_token": "Token invalido",
+    "invalid_token": "Token inválido",
     "user_not_found": "Usuario no encontrado",
-    "login_required": "Se requiere iniciar sesion",
+    "login_required": "Inicio de sesión requerido",
     "insufficient_permissions": "Permisos insuficientes",
-    "login_title": "Iniciar Sesion",
-    "admin_login_title": "Iniciar Sesion - Admin",
-    "user_login_title": "Iniciar Sesion - Usuario",
+    "login_title": "Iniciar Sesión",
+    "admin_login_title": "Inicio de Sesión de Administrador",
+    "user_login_title": "Inicio de Sesión de Usuario",
     "username": "Nombre de Usuario",
-    "password": "Contrasena",
-    "login_button": "Iniciar Sesion",
+    "password": "Contraseña",
+    "login_button": "Iniciar Sesión",
     "register_link": "Crear nueva cuenta",
     "back_to_home": "Volver al inicio"
   },
   "users": {
-    "user_created": "Usuario creado exitosamente",
-    "user_updated": "Usuario actualizado exitosamente",
-    "user_deleted": "Usuario eliminado exitosamente",
-    "user_not_found": "Usuario no encontrado",
-    "email_already_exists": "El email ya existe",
-    "username_already_exists": "El nombre de usuario ya existe",
-    "invalid_email": "Formato de email invalido",
-    "password_too_short": "La contrasena debe tener al menos 8 caracteres"
+    "user_created": "User created successfully",
+    "user_updated": "User updated successfully",
+    "user_deleted": "User deleted successfully",
+    "user_not_found": "User not found",
+    "email_already_exists": "Email already exists",
+    "username_already_exists": "Username already exists",
+    "invalid_email": "Invalid email format",
+    "password_too_short": "Password must be at least 8 characters long"
   },
   "items": {
-    "item_created": "Elemento creado exitosamente",
-    "item_updated": "Elemento actualizado exitosamente",
-    "item_deleted": "Elemento eliminado exitosamente",
-    "item_not_found": "Elemento no encontrado",
-    "invalid_item_data": "Datos del elemento invalidos"
+    "item_created": "Item created successfully",
+    "item_updated": "Item updated successfully",
+    "item_deleted": "Item deleted successfully",
+    "item_not_found": "Item not found",
+    "invalid_item_data": "Invalid item data"
   },
   "general": {
-    "success": "Exito",
+    "success": "Success",
     "error": "Error",
-    "not_found": "No encontrado",
-    "bad_request": "Solicitud incorrecta",
-    "internal_error": "Error interno del servidor",
-    "validation_error": "Error de validacion",
-    "unauthorized": "No autorizado",
-    "forbidden": "Prohibido"
+    "not_found": "Not found",
+    "bad_request": "Bad request",
+    "internal_error": "Internal server error",
+    "validation_error": "Validation error",
+    "unauthorized": "Unauthorized",
+    "forbidden": "Forbidden"
+  },
+  "dashboard": {
+    "admin_title": "Admin Dashboard",
+    "user_title": "User Dashboard",
+    "overview": "System Overview",
+    "welcome_admin": "Welcome to the Web API Admin Panel. Here you can manage users, items, and monitor your application.",
+    "welcome_user": "Welcome to your user dashboard",
+    "quick_actions": "Quick Actions",
+    "recent_activity": "Recent Activity",
+    "recent_users": "Recent Users",
+    "recent_items": "Recent Items",
+    "recent_apps": "Recent Apps",
+    "system_status": "System Status",
+    "storage_usage": "Storage Usage",
+    "api_performance": "API Performance",
+    "statistics": {
+      "total_users": "Total Users",
+      "active_users": "Active Users",
+      "total_items": "Total Items", 
+      "active_items": "Active Items",
+      "client_apps": "Client Apps",
+      "active_apps": "Active Apps",
+      "api_calls_today": "API Calls Today",
+      "total_api_calls": "Total API Calls",
+      "active": "active",
+      "total": "total"
+    },
+    "actions": {
+      "manage_users": "Manage Users",
+      "manage_items": "Manage Items",
+      "manage_apps": "Manage Apps", 
+      "client_apps": "Client Apps",
+      "add_new_user": "Add New User",
+      "add_new_item": "Add New Item",
+      "view_all": "View All",
+      "edit": "Edit",
+      "delete": "Delete",
+      "create": "Create"
+    },
+    "status": {
+      "online": "Online",
+      "offline": "Offline",
+      "active": "Active",
+      "inactive": "Inactive",
+      "pending": "Pending",
+      "approved": "Approved",
+      "rejected": "Rejected"
+    }
   },
   "forms": {
-    "name": "Nombre",
+    "name": "Name",
     "email": "Email",
-    "password": "Contrasena",
-    "confirm_password": "Confirmar Contrasena",
-    "title": "Titulo",
-    "description": "Descripcion",
-    "submit": "Enviar",
-    "cancel": "Cancelar",
-    "save": "Guardar",
-    "delete": "Eliminar",
-    "edit": "Editar",
-    "create": "Crear",
-    "update": "Actualizar"
+    "password": "Password",
+    "confirm_password": "Confirm Password",
+    "title": "Title",
+    "description": "Description",
+    "submit": "Submit",
+    "cancel": "Cancel",
+    "save": "Save",
+    "delete": "Delete",
+    "edit": "Edit",
+    "create": "Create",
+    "update": "Update"
   },
   "navigation": {
     "home": "Inicio",
     "users": "Usuarios",
     "items": "Elementos",
     "admin": "Administrador",
-    "login": "Iniciar Sesion",
-    "logout": "Cerrar Sesion",
-    "dashboard": "Panel de Control",
-    "profile": "Perfil"
+    "login": "Iniciar Sesión",
+    "logout": "Cerrar Sesión",
+    "dashboard": "Panel",
+    "profile": "Perfil",
+    "landing_page": "Página Principal",
+    "api_docs": "Documentación API",
+    "hello": "Hola",
+    "language": "Idioma",
+    "switch_language": "Cambiar Idioma"
+  },
+  "languages": {
+    "english": "Inglés",
+    "spanish": "Español",
+    "french": "Francés",
+    "german": "Alemán",
+    "polish": "Polaco"
   },
   "messages": {
-    "welcome": "Bienvenido a WebAPI Starter",
-    "operation_successful": "Operacion completada exitosamente",
-    "operation_failed": "La operacion fallo",
-    "please_try_again": "Por favor intenta de nuevo",
-    "contact_support": "Por favor contacta soporte si el problema persiste"
+    "welcome": "Welcome to WebAPI Starter",
+    "operation_successful": "Operation completed successfully",
+    "operation_failed": "Operation failed",
+    "please_try_again": "Please try again",
+    "contact_support": "Please contact support if the problem persists"
   },
   "landing": {
     "title": "Plantilla WebAPI Starter",
     "subtitle": "Tu Base para Proyectos de API Web",
-    "description": "Una plantilla lista para usar para construir APIs web profesionales con frameworks modernos de Python. Clona este proyecto y comienza a desarrollar inmediatamente con autenticacion preconfigurada, panel de administracion, gestion de usuarios, operaciones CRUD y documentacion completa - todo el codigo base que necesitas para lanzar tu proxima aplicacion web.",
-    "try_admin": "Probar Panel Admin",
-    "try_user_portal": "Probar Portal Usuario",
-    "create_account": "Crear Cuenta Usuario",
-    "explore_docs": "Explorar Docs API",
-    "features_title": "Caracteristicas Principales",
-    "auth_feature": "Autenticacion JWT",
-    "admin_feature": "Panel Admin",
+    "description": "Una plantilla lista para usar para construir APIs web profesionales con frameworks modernos de Python. Clona este proyecto y comienza a construir inmediatamente con autenticación preconfigurada, panel de administrador, gestión de usuarios, operaciones CRUD y documentación integral - todo el código base que necesitas para lanzar tu próxima aplicación web.",
+    "try_admin": "🛠️ Probar Panel de Administrador",
+    "try_user_portal": "👤 Probar Portal de Usuario",
+    "create_account": "📝 Crear Cuenta de Usuario",
+    "explore_docs": "📚 Explorar Documentación API",
+    "features_title": "Características Principales",
+    "auth_feature": "Autenticación JWT",
+    "admin_feature": "Panel de Administrador",
     "crud_feature": "Operaciones CRUD",
-    "docs_feature": "Documentacion API",
+    "docs_feature": "Documentación API",
     "footer_text": "Tu base para construir APIs web modernas.",
-    "admin_panel_title": "Panel de Administracion Listo",
-    "admin_panel_desc": "Interfaz de administracion preconfigurada para gestionar usuarios, elementos y monitoreo del sistema. Incluye control de acceso basado en roles y diseno responsivo hermoso - listo para personalizar segun tus necesidades especificas.",
+    "admin_panel_title": "Panel de Administrador Listo",
+    "admin_panel_desc": "Interfaz de administración preconfigurada para gestionar usuarios, elementos y monitoreo del sistema. Incluye control de acceso basado en roles y diseño responsivo hermoso - listo para personalizar según tus necesidades específicas.",
     "framework_title": "Base de Framework Moderno",
-    "framework_desc": "Construido sobre frameworks modernos de Python con todas las mejores practicas preconfiguradas. Patrones async/await, validacion automatica y alto rendimiento - punto de partida perfecto para APIs escalables.",
-    "auth_system_title": "Sistema de Autenticacion Incluido",
-    "auth_system_desc": "Sistema de autenticacion completo con tokens JWT, hash de contrasenas, gestion de sesiones y permisos basados en roles - no necesitas construir autenticacion desde cero.",
+    "framework_desc": "Construido sobre frameworks modernos de Python con todas las mejores prácticas preconfiguradas. Patrones async/await, validación automática y alto rendimiento - punto de partida perfecto para APIs escalables.",
+    "auth_system_title": "Sistema de Autenticación Incluido",
+    "auth_system_desc": "Sistema de autenticación completo con tokens JWT, hash de contraseñas, gestión de sesiones y permisos basados en roles - no necesitas construir autenticación desde cero.",
     "crud_title": "Plantilla CRUD",
-    "crud_desc": "Operaciones de Crear, Leer, Actualizar, Eliminar preimplementadas con modelos de base de datos, validacion y manejo de errores. Usalo tal como esta o extiendelo para tus tipos de datos personalizados.",
+    "crud_desc": "Operaciones de Crear, Leer, Actualizar, Eliminar preimplementadas con modelos de base de datos, validación y manejo de errores. Úsalo tal como está o extiéndelo para tus tipos de datos personalizados.",
     "api_structure_title": "Estructura API Lista",
-    "api_structure_desc": "Estructura de proyecto bien organizada con documentacion OpenAPI automatica, configuracion CORS y patrones de respuesta estandarizados - sigue los patrones establecidos para consistencia.",
+    "api_structure_desc": "Estructura de proyecto bien organizada con documentación OpenAPI automática, configuración CORS y patrones de respuesta estandarizados - sigue los patrones establecidos para consistencia.",
     "ui_templates_title": "Plantillas UI Incluidas",
-    "ui_templates_desc": "Plantillas HTML responsivas profesionales para formularios, dashboards e interfaces de usuario. Facilmente personalizables con CSS moderno - punto de partida perfecto para tu frontend."
+    "ui_templates_desc": "Plantillas HTML responsivas profesionales para formularios, dashboards e interfaces de usuario. Fácilmente personalizables con CSS moderno - punto de partida perfecto para tu frontend."
   }
 }
