Complete Polish translation implementation for all management interfaces
Major Features:
 Client Apps Management - Full Polish translation
 Language persistence across all admin interfaces
 Users and Items management - Complete Polish support
 Admin dashboard - Fully translated
 Navigation cleanup - Removed duplicate links

Polish Translation Enhancements:
- Added 50+ new Polish translations for client apps management
- Enhanced locales/pl/messages.json with comprehensive management section
- Translated all interface elements: forms, buttons, status labels, confirmations
- Updated templates/admin/client_apps.html with Polish translation calls
- Fixed navigation links to maintain language parameters

Template Updates:
- templates/admin/client_apps.html: Complete Polish translation integration
- templates/auth/login.html: Enhanced Polish translation support
- templates/base.html: Cleaned navigation menu structure
- templates/dashboard.html: Full Polish admin dashboard
- templates/users.html: Complete Polish users management
- templates/items.html: Complete Polish items management

Router Improvements:
- routers/client_apps.py: Language support already implemented
- routers/admin.py: Enhanced language persistence for all routes
- routers/auth.py: Fixed language parameter handling in redirects

UI/UX Improvements:
- Language persistence through authentication flows
- Consistent Polish interface across all management pages
- Clean navigation structure with proper language parameter passing
- Professional Polish translations with proper terminology

All management interfaces now fully functional in Polish:
- Dashboard: 'Panel administratora'
- Users: 'Zarządzanie użytkownikami'
- Items: 'Zarządzanie elementami'
- Client Apps: 'Zarządzanie aplikacjami klientów'

Ready for production use with complete Polish localization.

--- a/locales/pl/messages.json
+++ b/locales/pl/messages.json
@@ -29,7 +29,16 @@
         "confirm_password": "Potwierdź hasło",
         "register_button": "Zarejestruj się",
         "already_have_account": "Masz już konto?",
-        "sign_in_here": "Zaloguj się tutaj"
+        "sign_in_here": "Zaloguj się tutaj",
+        "access_admin_dashboard": "Uzyskaj dostęp do panelu administracyjnego",
+        "access_user_portal": "Uzyskaj dostęp do portalu użytkownika i wyszukaj elementy",
+        "access_application": "Uzyskaj dostęp do aplikacji",
+        "demo_credentials": "Dane demonstracyjne (skopiuj i wklej)",
+        "admin_access": "Dostęp administratora",
+        "user_access": "Dostęp użytkownika",
+        "regular_user": "Zwykły użytkownik",
+        "admin": "Administrator",
+        "user": "Użytkownik"
     },
     "navigation": {
         "home": "Strona główna",
@@ -124,6 +133,9 @@
             "total_items": "Łączna liczba elementów",
             "active_items": "Aktywne elementy",
             "active_users": "Aktywni użytkownicy",
+            "total_users": "Łączna liczba użytkowników",
+            "client_apps": "Aplikacje klientów",
+            "active_apps": "Aktywne aplikacje",
             "total": "Łącznie"
         },
         "status": {
@@ -135,8 +147,130 @@
         "actions": {
             "view_all": "Zobacz wszystkie",
             "create_new": "Utwórz nowy",
-            "manage": "Zarządzaj"
+            "manage": "Zarządzaj",
+            "manage_users": "Zarządzaj użytkownikami",
+            "manage_items": "Zarządzaj elementami",
+            "client_apps": "Aplikacje klientów",
+            "add_new_user": "Dodaj nowego użytkownika",
+            "add_new_item": "Dodaj nowy element",
+            "view_all_users": "Zobacz wszystkich użytkowników",
+            "view_all_items": "Zobacz wszystkie elementy",
+            "manage_all_client_apps": "Zarządzaj wszystkimi aplikacjami klientów",
+            "create_first_app": "Utwórz swoją pierwszą aplikację",
+            "api_token_endpoint": "Punkt końcowy tokenu API",
+            "view": "Zobacz",
+            "edit": "Edytuj",
+            "delete": "Usuń",
+            "activate": "Aktywuj",
+            "deactivate": "Deaktywuj"
+        },
+        "welcome_admin": "Witaj w panelu administracyjnym",
+        "quick_actions": "Szybkie akcje",
+        "recent_activity": "Ostatnia aktywność",
+        "recent_users": "Ostatni użytkownicy",
+        "recent_items_admin": "Ostatnie elementy",
+        "client_applications": "Aplikacje klientów",
+        "table": {
+            "id": "ID",
+            "username": "Nazwa użytkownika",
+            "email": "Email",
+            "role": "Rola",
+            "status": "Status",
+            "created": "Utworzono",
+            "updated": "Zaktualizowano",
+            "name": "Nazwa",
+            "description": "Opis",
+            "price": "Cena",
+            "owner": "Właściciel",
+            "app_id": "ID aplikacji",
+            "actions": "Akcje",
+            "full_name": "Imię i nazwisko"
+        },
+        "no_data": {
+            "no_users_found": "Nie znaleziono użytkowników.",
+            "no_items_found": "Nie znaleziono elementów.",
+            "no_client_applications_found": "Nie znaleziono aplikacji klientów."
+        },
+        "status_labels": {
+            "active": "Aktywny",
+            "inactive": "Nieaktywny",
+            "unknown": "Nieznany"
         }
+    },
+    "management": {
+        "user_management": "Zarządzanie użytkownikami",
+        "item_management": "Zarządzanie elementami",
+        "client_app_management": "Zarządzanie aplikacjami klientów",
+        "total_users": "Łączna liczba użytkowników",
+        "total_items": "Łączna liczba elementów",
+        "total_client_apps": "Łączna liczba aplikacji klientów",
+        "no_users_found": "Nie znaleziono użytkowników",
+        "no_items_found": "Nie znaleziono elementów", 
+        "no_client_apps_found": "Nie znaleziono aplikacji klientów",
+        "confirm_delete_user": "Czy na pewno chcesz usunąć tego użytkownika?",
+        "confirm_delete_item": "Czy na pewno chcesz usunąć ten element?",
+        "confirm_delete_app": "Czy na pewno chcesz usunąć tę aplikację?",
+        "create_new_client_app": "Utwórz nową aplikację klienta",
+        "api_usage_guide": "Przewodnik użytkowania API",
+        "test_bearer_token": "Testowy token Bearer wygenerowany",
+        "no_client_applications": "Brak aplikacji klientów",
+        "app_name": "Nazwa aplikacji",
+        "app_description": "Opis aplikacji",
+        "is_active": "Aktywna",
+        "generate_token": "Generuj token",
+        "copy_credentials": "Skopiuj dane uwierzytelniające",
+        "show_secret": "Pokaż sekret",
+        "hide_secret": "Ukryj sekret",
+        "client_apps_title": "Zarządzanie aplikacjami klientów",
+        "client_apps_subtitle": "Zarządzaj aplikacjami klientów API i ich danymi uwierzytelniającymi",
+        "back_to_admin": "← Powrót do panelu administratora",
+        "api_token_endpoint": "Punkt końcowy tokenu API",
+        "success": "Sukces!",
+        "application_name_required": "Nazwa aplikacji *",
+        "application_name_placeholder": "Moja aplikacja API",
+        "description": "Opis",
+        "description_placeholder": "Krótki opis aplikacji",
+        "active": "Aktywna",
+        "create_app": "Utwórz aplikację",
+        "status_active": "Aktywna",
+        "status_inactive": "Nieaktywna",
+        "app_id": "ID aplikacji:",
+        "app_secret": "Sekret aplikacji:",
+        "save_credentials_warning": "⚠️ Zapisz te dane uwierzytelniające! Sekret zostanie ukryty po tym.",
+        "get_test_token": "🎫 Pobierz token testowy",
+        "regenerate_secret": "🔄 Regeneruj sekret",
+        "regenerate_secret_confirm": "Regenerować sekret? To unieważni istniejące tokeny.",
+        "deactivate": "⏸️ Dezaktywuj",
+        "activate": "▶️ Aktywuj",
+        "delete": "🗑️ Usuń",
+        "delete_confirm": "Usunąć tę aplikację? Tej operacji nie można cofnąć.",
+        "created": "Utworzono:",
+        "updated": "Zaktualizowano:",
+        "no_apps_title": "Brak aplikacji klientów",
+        "no_apps_description": "Utwórz swoją pierwszą aplikację klienta, aby rozpocząć dostęp do API.",
+        "usage_guide_title": "📚 Przewodnik użytkowania API",
+        "usage_step1": "1. Pobierz token API:",
+        "usage_step2": "2. Użyj tokenu w wywołaniach API:",
+        "usage_step3": "3. Token wygasa po 1 godzinie domyślnie. Żądaj nowych tokenów w razie potrzeby.",
+        "token_modal_title": "🎫 Wygenerowano testowy token Bearer",
+        "token_modal_app": "Aplikacja:",
+        "token_modal_token": "Token Bearer:",
+        "token_modal_expires": "Wygasa:",
+        "usage_examples": "📋 Przykłady użytkowania:",
+        "swagger_ui": "Swagger UI:",
+        "swagger_step1": "1. Przejdź do",
+        "swagger_step2": "2. Kliknij przycisk \"Authorize\"",
+        "swagger_step3": "3. Wprowadź: ",
+        "curl_example": "curl:",
+        "python_example": "Python:",
+        "copy_token": "📋 Skopiuj token",
+        "close": "Zamknij",
+        "generating": "⏳ Generowanie...",
+        "copied": "✅ Skopiowano!",
+        "error_generating_token": "Błąd generowania tokenu:",
+        "unknown_error": "Nieznany błąd",
+        "error": "Błąd:",
+        "token_copied": "Token skopiowany do schowka!"
     },
     "users": {
         "user_created": "Użytkownik został utworzony pomyślnie",
